# pypekeris

./: .gitignore  Pekeris Solver.ipynb  Pekeris broadband (parallel) in progres....ipynb  README.md  pypekeris.yml  pyproject.toml
src/pypekeris/: __init__.py  pypekeris.py
src/pypekeris/core/: __init__.py  core.py
src/pypekeris/io/: __init__.py  io.py
