[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "pypekeris"
version = "0.0.1"
dependencies = [
    "requests",
    'importlib-metadata; python_version>"3.8"',
    'matplotlib',
    'notebook',
    'numpy',
    'xarray',
    'geopy',
    'pandas',
    'obspy',
    'tqdm',
]
